FIxed marketplaceModalPluginImages overflow
Former-commit-id: df1b47c7ae938686b4cea31047009161c89d3797

--- a/marketplace/src/marketplace/styles/marketplace.module.css
+++ b/marketplace/src/marketplace/styles/marketplace.module.css
@@ -673,7 +673,6 @@
     flex-direction: row;
     flex-wrap: nowrap;
     overflow: scroll;
-    width: fit-content;
   }
   .marketplaceModalPluginImages img{
     width: 8rem;
